fixed alignment

--- a/cs411.css
+++ b/cs411.css
@@ -7,9 +7,29 @@ html {overflow-y: scroll;}
 	width: 600px;
 }
 
+.p_inline{
+	margin-left: 75px;
+	margin-top: -30px;
+}
+
+.s_inline{
+	margin-left: 75px;
+	margin-top: -30px;
+	width:831px;
+}
+.form-group{
+	float:left;
+	display:inline;
+}
+
 .text_area {
 	height: 200px;
 	width: 580px;
+}
+
+.q_text_area {
+	height:200px;
+	width: 600px;
 }
 
 .edit_area {
@@ -65,10 +85,10 @@ html {overflow-y: scroll;}
   text-align: right;
 }
 #search_category{
-  width: 15%;
+  width: 17%;
 }
 #post_category{
-  width: 30%;
+  width: 150%;
 }
 
 #search_button{
